Prevent layout shift using predefined line-height

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -285,6 +285,7 @@ footer {
   border: 1px solid @lightgray;
   border-radius: 0;
   height: 46px;
+  line-height: 46px;
 }
 #input-gitignore::-ms-expand {
   display: none;
